# lib_cppgeometry

./: .clang-format  .gitignore  Angle.cpp  Angle.hpp  CMakeLists.txt  Circle.cpp  Circle.hpp  CircleArc.cpp  CircleArc.hpp  ComplexNumber.cpp  ComplexNumber.hpp  Curve.cpp  Curve.hpp  Fractals.cpp  Fractals.hpp  Graph.cpp  Graph.hpp  Line.cpp  Line.hpp  LineSegment.cpp  LineSegment.hpp  Point.cpp  Point.hpp  Polygon.cpp  Polygon.hpp  Quadrilateral.cpp  Quadrilateral.hpp  functions.cpp  functions.hpp  tfunctions.cpp  tfunctions.hpp
